--- a/index.html
+++ b/index.html
@@ -43,6 +43,16 @@
             width: 100%;
         }
 
+        .text-container a {
+            display: block;
+            color: white;
+            text-decoration: none;
+        }
+
+        .text-container a:hover {
+            text-decoration: underline;
+        }
+
         .marker-container {
             width: fit-content;
         }
@@ -153,47 +163,58 @@
             {
                 align: "bottom-right",
                 name: `MIT, Cambridge, Massachusetts:
-                        <div>- J-PAL Global</div>
-                        <div>- MIT J-WAFS</div>
-                        <div>- MIT J-WEL</div>
-                        <div>- MIT Jameel Clinic</div>
-                        <div>- Jameel Observatory CREWSnet</div>
+                        <a href="" target="_blank">- J-PAL Global</a
+                         <a href="" target="_blank">- MIT J-WAFS</a>
+                         <a href="" target="_blank">- MIT J-WEL</a>
+                         <a href="" target="_blank">- MIT Jameel Clinic</a>
+                         <a href="" target="_blank">- Jameel Observatory CREWSnet</a>
 
             `, coordinates: [-71.09240951238363, 42.35896932867615]
             },
-            { align: "top-right", name: 'New York City, New York:<br>Jameel Arts & Health Lab', coordinates: [-74.00000563856793, 40.724678411585764] },
             {
-                align: "bottom-right", name: `London, United Kingdom:
-                <div>Jameel Institute</div>
-                <div> CLIMAVORE x Jameel at RCA</div>
+                align: "top-right",
+                name: `New York City, New York:
+                    <a href="" target="_blank">- Jameel Arts & Health Lab</a>`,
+                coordinates: [-74.00000563856793, 40.724678411585764]
+            },
+            {
+                align: "bottom-right",
+                name: `London, United Kingdom:
+                    <a href="" target="_blank">Jameel Institute</a>
+                    <a href="" target="_blank">CLIMAVORE x Jameel at RCA</a>
                 `, coordinates: [-0.06799825376552351, 51.50881496054432]
             },
-            { align: "top-left", name: 'Paris, France:<br> - J-PAL Europe', coordinates: [2.33887024861499, 48.871736664429854] },
+            {
+                align: "top-left",
+                name: `Paris, France:
+                    <a href="" target="_blank"> - J-PAL Europe</a>`,
+                coordinates: [2.33887024861499, 48.871736664429854]
+            },
             {
                 align: "top-right", name: `Cairo, Egypt:
-                    <div>- J-PAL MENA</div>
-                    <div>- Egypt Impact Lab</div>
-                    <div>- Jameel House</div>
+                     <a href="" target="_blank">- J-PAL MENA</a>
+                     <a href="" target="_blank">- Egypt Impact Lab</a>
+                     <a href="" target="_blank">- Jameel House</a>
                 `, coordinates: [31.251933921018196, 30.066274663503993]
             },
             {
                 align: "top-left", name: `Amman, Jordan:
-                    <div>- Jameel C40</div>
+                     <a href="" target="_blank">- Jameel C40</a>
                 `, coordinates: [35.948483653410904, 31.87326059074893]
             },
             {
                 align: "top-right", name: `Nairobi, Kenya:
-                    <div>- Jameel Observatory for Food Security Early Action</div>
+                     <a href="" target="_blank">- Jameel Observatory for Food Security Early Action</a>
                 `, coordinates: [36.858294042232124, -1.3429733852535548]
             },
             {
                 align: "top-left", name: `New Delhi, India:
-                    <div>J-PAL South Asia</div>
+                     <a href="" target="_blank">J-PAL South Asia</a>
                 `, coordinates: [77.19326317414409, 28.546483963642814]
             },
             {
                 align: "top-left", name: `Jakarta, Indonesia:
-                    <div>J-PAL Southeast Asia</div>
+                   <a href="" target="_blank">J-PAL Southeast Asia</a>
                 `, coordinates: [106.82780564173726, -6.154590023554769]
             },
 
