--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
 
 
         // mapboxgl.accessToken = 'pk.eyJ1Ijoic2VyaHV6IiwiYSI6ImNseXpvc3RlczJpbnIya3FscDU2aHc5d3EifQ.FHtPjde_lqensSHZxqthgw';
-        mapboxgl.accessToken = 'pk.eyJ1IjoidGhlZmxvd25vZGVyIiwiYSI6ImNsZm4xYmljZjBjcGMzeW5wczZjamN4ZTMifQ.19gBzrpz8b1Hb3i7z8rHAA';
+        mapboxgl.accessToken = 'pk.eyJ1IjoiY29tbXVuaXR5amFtZWVsIiwiYSI6ImNsejVlNnVudTQ0bjcyaXFsb3lkM290ZnYifQ.TZqULeKUIpCisFDY36exQA';
 
         const map = new mapboxgl.Map({
             container: 'map',
